@@ -29,6 +29,15 @@ on one day.
 
 
 
+
+<dt><b>LilyPond 2.9.20 available</b> - <em>October 3, 2006</em>
+
+<dd>
+Test this release candidate for LilyPond 2.10!  (<a
+href="install/#2.9">Download</a>)
+</dd>
+
+ 
 <dt><b>LilyPond 2.9.17 available</b> - <em>September 2, 2006</em>
 
 <dd>
@@ -46,14 +55,6 @@ tunable padding. Moreover, many bugs were fixed
   (<a
 href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
 href="install/#2.9">Download</a>)
-</dd>
-
-<dt><b>LilyPond 2.9.15 available</b> - <em>August 20, 2006</em>
-
-<dd>
-This releases fixes many bugs in the 2.9.14 release.  (<a
-href="install/#2.8">Download</a>)
-
 </dd>
 
 </dl>
