@@ -60,8 +60,10 @@
 	  
 
     Put fragments of music into texts with without cutting and pasting
-  pictures. With the <tt>lilypond-book</tt> utitility, you can
-  integrate music into LaTeX or HTML seamlessly.  </dd>
+  pictures.  Integrate music into LaTeX or HTML seamlessly, or add
+  music to OpenOffice.org with <a
+  href="http://ooolilypond.sourceforge.net/">ooolilypond</a>.
+   </dd>
 
   <dt>Even better than part extraction!</dt>
 
