@@ -1,3 +1,7 @@
+2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably): 2.9.20
+
 2006-09-17  John Mandereau  <john.mandereau@free.fr>
 
 	* fr/index.html: remove sponsoring section.
